Updated threshold test code

--- a/2_Maps.ipynb
+++ b/2_Maps.ipynb
@@ -34,7 +34,8 @@
     "sys.path.append(\"./simulation_code/\")\n",
     "from simulate_des_maps import *\n",
     "\n",
-    "from coefficient import * "
+    "from coefficient import * \n",
+    "from threshold import * "
    ]
   },
   {
@@ -195,11 +196,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "### Testing Threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inputs\n",
+    "itr = 100\n",
     "\n",
+    "# build simulated maps\n",
+    "%time c_map_fixed,l_map_fixed,c_map,l_map,S_8 = setup_threshold_mf(itr,nside=256,smoothing=20,b=10)\n",
+    "\n",
+    "\n",
+    "# calculate mfs\n",
+    "thr_ct_array = np.linspace(10,50,5,dtype=int) \n",
+    "constraint_array = np.zeros(len(thr_ct_array)) \n",
+    "\n",
+    "for index,t in enumerate(thr_ct_array):\n",
+    "    constraint_array[index] = threshold_mf(t,itr,c_map_fixed,l_map_fixed,c_map,l_map,S_8,nside=256,map_len=9,b=10)\n",
+    "    \n",
+    "\n",
+    "# save threshold constraint output\n",
+    "output_path = os.path.join(os.getcwd(), '2_Maps_Output')\n",
+    "np.savetxt(os.path.join(output_path, 'threshold_vs_constraints.out'),constraint_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Testing nside: \n",
-    "\n",
-    "(Joe already ran)"
+    "\n"
    ]
   },
   {
@@ -693,19 +724,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Varying Threshold\n",
+    "# Varying Threshold\n",
     "\n",
     "#### Building the Maps (only need to do once)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,28 +761,46 @@
     "N = 12*nside*nside             \n",
     "\n",
     "## Analysis Variables\n",
-    "itr = 100                        \n",
+    "itr = 10#100                        \n",
     "map_len = 9                    \n",
     "b=10      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# create fixed maps with iterations\n",
     "c_map_fixed = np.zeros((itr,5,N)) \n",
     "l_map_fixed = np.zeros((itr,4,N))\n",
     "    \n",
     "for i in range(itr):\n",
-    "    c_map_fixed[i], l_map_fixed[i] = simulate_des_maps(0.3, 0.8, smoothing, nside)"
+    "    c_map_fixed[i], l_map_fixed[i] = simulate_des_maps(0.3, 0.8, smoothing, nside)\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,13 +836,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def threshold_mf(thr_ct):#,itr,map_len,b,N):\n",
+    "def setup_threshold_mf(itr):\n",
+    "    \n",
+    "    N = 12*nside*nside \n",
+    "    \n",
+    "    # create fixed maps with iterations\n",
+    "    c_map_fixed = np.zeros((itr,5,N)) \n",
+    "    l_map_fixed = np.zeros((itr,4,N))\n",
+    "\n",
+    "    for i in range(itr):\n",
+    "        c_map_fixed[i], l_map_fixed[i] = simulate_des_maps(0.3, 0.8, smoothing, nside)\n",
+    "        print(i)\n",
+    "        \n",
+    "    # points (get constants from plotting notebook)\n",
+    "    omega_m = np.linspace(0.2,0.4,b)\n",
+    "    sigma_8 = 0.8989639361571576*omega_m + 0.5303108191528527\n",
+    "\n",
+    "    S_8 = np.zeros(b)\n",
+    "    for i in range(b):\n",
+    "        S_8[i] = sigma_8[i] * (omega_m[i]/0.3)**0.5329788249790618  \n",
+    "        \n",
+    "    # create maps with changing omega and sigma\n",
+    "    c_map = np.zeros((b,5,N)) \n",
+    "    l_map = np.zeros((b,4,N))\n",
+    "\n",
+    "    for i in range(b):\n",
+    "        c_map[i], l_map[i] = simulate_des_maps(omega_m[i], sigma_8[i], smoothing, nside)\n",
+    "        print(i)\n",
+    "             \n",
+    "    return c_map_fixed,l_map_fixed,c_map,l_map,S_8\n",
+    "\n",
+    "\n",
+    "def threshold_mf(thr_ct,itr,c_map_fixed,l_map_fixed,c_map,l_map,S_8):\n",
     "    \n",
     "    array_len = map_len*thr_ct*3\n",
+    "    \n",
+    "    N = 12*nside*nside  \n",
     "\n",
     "    ## fixed maps\n",
     "    v_all_fixed = np.zeros((itr,array_len)) \n",
@@ -822,88 +918,6 @@
     "\n",
     "    coefficient = np.polyfit(S_8,L,2)\n",
     "    return sqrt(-1 / (2*coefficient[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:45: RuntimeWarning: invalid value encountered in sqrt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-48-92fd41e3a0dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthr_ct_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mconstraint_array\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthreshold_mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mconstraint_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-47-dd309ad05f17>\u001b[0m in \u001b[0;36mthreshold_mf\u001b[0;34m(thr_ct)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mV_all\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0marray_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalc_mf_2maps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mthr_ct\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mV_all\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/mink/coefficient.py\u001b[0m in \u001b[0;36mcalc_mf_2maps\u001b[0;34m(clustering_maps, lensing_maps, thr_ct, N)\u001b[0m\n\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlensing_maps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m         \u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalc_mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthr_ct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_clustering\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/mink/coefficient.py\u001b[0m in \u001b[0;36mcalc_mf\u001b[0;34m(m, thr_ct, N, is_clustering)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0mv_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mV_0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m     \u001b[0mv_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mV_12\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdm_dphi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdm_dtheta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md2m_dphi2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md2m_dtheta_dphi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md2m_dtheta2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv_0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv_2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/mink/coefficient.py\u001b[0m in \u001b[0;36mV_12\u001b[0;34m(v, k, kx, ky, kxx, kxy, kyy, N)\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;31m# filter out values outside valid indeces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m             \u001b[0moutput1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m             \u001b[0moutput2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mfrac\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "constraint_array = np.zeros(len(thr_ct_array)) \n",
-    "\n",
-    "for index,t in enumerate(thr_ct_array):\n",
-    "    constraint_array[index] = threshold_mf(t)\n",
-    "    \n",
-    "constraint_array"
    ]
   },
   {
