updated threshold code to output mf arrays in simplified folder

--- a/2_Maps.ipynb
+++ b/2_Maps.ipynb
@@ -35,6 +35,7 @@
     "from simulate_des_maps import *\n",
     "\n",
     "from coefficient import * \n",
+    "from coefficient2 import * \n",
     "from threshold import * "
    ]
   },
@@ -181,22 +182,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(smoothing_array,smoothing_output,'o')\n",
-    "plt.xlabel('Smoothing')\n",
-    "plt.xticks(smoothing_array)\n",
-    "plt.ylabel('Constraining Power');"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing Threshold"
+    "### Testing Threshold (updated code on top - 5 lines)\n",
+    "\n",
+    "only use one clustering map and one lensing map in coefficient2"
    ]
   },
   {
@@ -205,6 +196,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%time coefficient2(thr_ct=10, smoothing=20, nside=256, itr=100, b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time coefficient2(thr_ct=20, smoothing=20, nside=256, itr=100, b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time coefficient2(thr_ct=30, smoothing=20, nside=256, itr=100, b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time coefficient2(thr_ct=40, smoothing=20, nside=256, itr=100, b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time coefficient2(thr_ct=50, smoothing=20, nside=256, itr=100, b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## OLD CODE ##\n",
+    "\n",
     "# inputs\n",
     "itr = 100\n",
     "\n",
