--- a/Sky_Fraction.ipynb
+++ b/Sky_Fraction.ipynb
@@ -50,7 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time coefficient_f(thr_ct=10, smoothing=5, nside=512, itr=100, b=10, f=100)"
+    "thr_ct=10\n",
+    "smoothing=20\n",
+    "nside=512\n",
+    "\n",
+    "N_p = 12*nside*nside"
    ]
   },
   {
@@ -59,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time coefficient_f(thr_ct=10, smoothing=5, nside=512, itr=100, b=10, f=200)"
+    "%time coefficient_f(thr_ct, smoothing, nside, itr=100, b=10, f=int(floor(0.2*N_p)))"
    ]
   },
   {
@@ -68,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time coefficient_f(thr_ct=10, smoothing=5, nside=512, itr=100, b=10, f=300)"
+    "%time coefficient_f(thr_ct, smoothing, nside, itr=100, b=10, f=int(floor(0.3*N_p)))"
    ]
   },
   {
@@ -77,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time coefficient_f(thr_ct=10, smoothing=5, nside=512, itr=100, b=10, f=400)"
+    "%time coefficient_f(thr_ct, smoothing, nside, itr=100, b=10, f=int(floor(0.4*N_p)))"
    ]
   },
   {
@@ -86,7 +90,337 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time coefficient_f(thr_ct=10, smoothing=5, nside=512, itr=100, b=10, f=500)"
+    "%time coefficient_f(thr_ct, smoothing, nside, itr=100, b=10, f=int(floor(0.5*N_p)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulating maps for iteration  0\n",
+      "Computing functionals for iteration 0\n",
+      "0\n",
+      "Simulating maps for iteration  1\n",
+      "Computing functionals for iteration 1\n",
+      "1\n",
+      "Simulating maps for iteration  2\n",
+      "Computing functionals for iteration 2\n",
+      "2\n",
+      "Simulating maps for iteration  3\n",
+      "Computing functionals for iteration 3\n",
+      "3\n",
+      "Simulating maps for iteration  4\n",
+      "Computing functionals for iteration 4\n",
+      "4\n",
+      "Simulating maps for iteration  5\n",
+      "Computing functionals for iteration 5\n",
+      "5\n",
+      "Simulating maps for iteration  6\n",
+      "Computing functionals for iteration 6\n",
+      "6\n",
+      "Simulating maps for iteration  7\n",
+      "Computing functionals for iteration 7\n",
+      "7\n",
+      "Simulating maps for iteration  8\n",
+      "Computing functionals for iteration 8\n",
+      "8\n",
+      "Simulating maps for iteration  9\n",
+      "Computing functionals for iteration 9\n",
+      "9\n",
+      "Simulating maps for iteration  10\n",
+      "Computing functionals for iteration 10\n",
+      "10\n",
+      "Simulating maps for iteration  11\n",
+      "Computing functionals for iteration 11\n",
+      "11\n",
+      "Simulating maps for iteration  12\n",
+      "Computing functionals for iteration 12\n",
+      "12\n",
+      "Simulating maps for iteration  13\n",
+      "Computing functionals for iteration 13\n",
+      "13\n",
+      "Simulating maps for iteration  14\n",
+      "Computing functionals for iteration 14\n",
+      "14\n",
+      "Simulating maps for iteration  15\n",
+      "Computing functionals for iteration 15\n",
+      "15\n",
+      "Simulating maps for iteration  16\n",
+      "Computing functionals for iteration 16\n",
+      "16\n",
+      "Simulating maps for iteration  17\n",
+      "Computing functionals for iteration 17\n",
+      "17\n",
+      "Simulating maps for iteration  18\n",
+      "Computing functionals for iteration 18\n",
+      "18\n",
+      "Simulating maps for iteration  19\n",
+      "Computing functionals for iteration 19\n",
+      "19\n",
+      "Simulating maps for iteration  20\n",
+      "Computing functionals for iteration 20\n",
+      "20\n",
+      "Simulating maps for iteration  21\n",
+      "Computing functionals for iteration 21\n",
+      "21\n",
+      "Simulating maps for iteration  22\n",
+      "Computing functionals for iteration 22\n",
+      "22\n",
+      "Simulating maps for iteration  23\n",
+      "Computing functionals for iteration 23\n",
+      "23\n",
+      "Simulating maps for iteration  24\n",
+      "Computing functionals for iteration 24\n",
+      "24\n",
+      "Simulating maps for iteration  25\n",
+      "Computing functionals for iteration 25\n",
+      "25\n",
+      "Simulating maps for iteration  26\n",
+      "Computing functionals for iteration 26\n",
+      "26\n",
+      "Simulating maps for iteration  27\n",
+      "Computing functionals for iteration 27\n",
+      "27\n",
+      "Simulating maps for iteration  28\n",
+      "Computing functionals for iteration 28\n",
+      "28\n",
+      "Simulating maps for iteration  29\n",
+      "Computing functionals for iteration 29\n",
+      "29\n",
+      "Simulating maps for iteration  30\n",
+      "Computing functionals for iteration 30\n",
+      "30\n",
+      "Simulating maps for iteration  31\n",
+      "Computing functionals for iteration 31\n",
+      "31\n",
+      "Simulating maps for iteration  32\n",
+      "Computing functionals for iteration 32\n",
+      "32\n",
+      "Simulating maps for iteration  33\n",
+      "Computing functionals for iteration 33\n",
+      "33\n",
+      "Simulating maps for iteration  34\n",
+      "Computing functionals for iteration 34\n",
+      "34\n",
+      "Simulating maps for iteration  35\n",
+      "Computing functionals for iteration 35\n",
+      "35\n",
+      "Simulating maps for iteration  36\n",
+      "Computing functionals for iteration 36\n",
+      "36\n",
+      "Simulating maps for iteration  37\n",
+      "Computing functionals for iteration 37\n",
+      "37\n",
+      "Simulating maps for iteration  38\n",
+      "Computing functionals for iteration 38\n",
+      "38\n",
+      "Simulating maps for iteration  39\n",
+      "Computing functionals for iteration 39\n",
+      "39\n",
+      "Simulating maps for iteration  40\n",
+      "Computing functionals for iteration 40\n",
+      "40\n",
+      "Simulating maps for iteration  41\n",
+      "Computing functionals for iteration 41\n",
+      "41\n",
+      "Simulating maps for iteration  42\n",
+      "Computing functionals for iteration 42\n",
+      "42\n",
+      "Simulating maps for iteration  43\n",
+      "Computing functionals for iteration 43\n",
+      "43\n",
+      "Simulating maps for iteration  44\n",
+      "Computing functionals for iteration 44\n",
+      "44\n",
+      "Simulating maps for iteration  45\n",
+      "Computing functionals for iteration 45\n",
+      "45\n",
+      "Simulating maps for iteration  46\n",
+      "Computing functionals for iteration 46\n",
+      "46\n",
+      "Simulating maps for iteration  47\n",
+      "Computing functionals for iteration 47\n",
+      "47\n",
+      "Simulating maps for iteration  48\n",
+      "Computing functionals for iteration 48\n",
+      "48\n",
+      "Simulating maps for iteration  49\n",
+      "Computing functionals for iteration 49\n",
+      "49\n",
+      "Simulating maps for iteration  50\n",
+      "Computing functionals for iteration 50\n",
+      "50\n",
+      "Simulating maps for iteration  51\n",
+      "Computing functionals for iteration 51\n",
+      "51\n",
+      "Simulating maps for iteration  52\n",
+      "Computing functionals for iteration 52\n",
+      "52\n",
+      "Simulating maps for iteration  53\n",
+      "Computing functionals for iteration 53\n",
+      "53\n",
+      "Simulating maps for iteration  54\n",
+      "Computing functionals for iteration 54\n",
+      "54\n",
+      "Simulating maps for iteration  55\n",
+      "Computing functionals for iteration 55\n",
+      "55\n",
+      "Simulating maps for iteration  56\n",
+      "Computing functionals for iteration 56\n",
+      "56\n",
+      "Simulating maps for iteration  57\n",
+      "Computing functionals for iteration 57\n",
+      "57\n",
+      "Simulating maps for iteration  58\n",
+      "Computing functionals for iteration 58\n",
+      "58\n",
+      "Simulating maps for iteration  59\n",
+      "Computing functionals for iteration 59\n",
+      "59\n",
+      "Simulating maps for iteration  60\n",
+      "Computing functionals for iteration 60\n",
+      "60\n",
+      "Simulating maps for iteration  61\n",
+      "Computing functionals for iteration 61\n",
+      "61\n",
+      "Simulating maps for iteration  62\n",
+      "Computing functionals for iteration 62\n",
+      "62\n",
+      "Simulating maps for iteration  63\n",
+      "Computing functionals for iteration 63\n",
+      "63\n",
+      "Simulating maps for iteration  64\n",
+      "Computing functionals for iteration 64\n",
+      "64\n",
+      "Simulating maps for iteration  65\n",
+      "Computing functionals for iteration 65\n",
+      "65\n",
+      "Simulating maps for iteration  66\n",
+      "Computing functionals for iteration 66\n",
+      "66\n",
+      "Simulating maps for iteration  67\n",
+      "Computing functionals for iteration 67\n",
+      "67\n",
+      "Simulating maps for iteration  68\n",
+      "Computing functionals for iteration 68\n",
+      "68\n",
+      "Simulating maps for iteration  69\n",
+      "Computing functionals for iteration 69\n",
+      "69\n",
+      "Simulating maps for iteration  70\n",
+      "Computing functionals for iteration 70\n",
+      "70\n",
+      "Simulating maps for iteration  71\n",
+      "Computing functionals for iteration 71\n",
+      "71\n",
+      "Simulating maps for iteration  72\n",
+      "Computing functionals for iteration 72\n",
+      "72\n",
+      "Simulating maps for iteration  73\n",
+      "Computing functionals for iteration 73\n",
+      "73\n",
+      "Simulating maps for iteration  74\n",
+      "Computing functionals for iteration 74\n",
+      "74\n",
+      "Simulating maps for iteration  75\n",
+      "Computing functionals for iteration 75\n",
+      "75\n",
+      "Simulating maps for iteration  76\n",
+      "Computing functionals for iteration 76\n",
+      "76\n",
+      "Simulating maps for iteration  77\n",
+      "Computing functionals for iteration 77\n",
+      "77\n",
+      "Simulating maps for iteration  78\n",
+      "Computing functionals for iteration 78\n",
+      "78\n",
+      "Simulating maps for iteration  79\n",
+      "Computing functionals for iteration 79\n",
+      "79\n",
+      "Simulating maps for iteration  80\n",
+      "Computing functionals for iteration 80\n",
+      "80\n",
+      "Simulating maps for iteration  81\n",
+      "Computing functionals for iteration 81\n",
+      "81\n",
+      "Simulating maps for iteration  82\n",
+      "Computing functionals for iteration 82\n",
+      "82\n",
+      "Simulating maps for iteration  83\n",
+      "Computing functionals for iteration 83\n",
+      "83\n",
+      "Simulating maps for iteration  84\n",
+      "Computing functionals for iteration 84\n",
+      "84\n",
+      "Simulating maps for iteration  85\n",
+      "Computing functionals for iteration 85\n",
+      "85\n",
+      "Simulating maps for iteration  86\n",
+      "Computing functionals for iteration 86\n",
+      "86\n",
+      "Simulating maps for iteration  87\n",
+      "Computing functionals for iteration 87\n",
+      "87\n",
+      "Simulating maps for iteration  88\n",
+      "Computing functionals for iteration 88\n",
+      "88\n",
+      "Simulating maps for iteration  89\n",
+      "Computing functionals for iteration 89\n",
+      "89\n",
+      "Simulating maps for iteration  90\n",
+      "Computing functionals for iteration 90\n",
+      "90\n",
+      "Simulating maps for iteration  91\n",
+      "Computing functionals for iteration 91\n",
+      "91\n",
+      "Simulating maps for iteration  92\n",
+      "Computing functionals for iteration 92\n",
+      "92\n",
+      "Simulating maps for iteration  93\n",
+      "Computing functionals for iteration 93\n",
+      "93\n",
+      "Simulating maps for iteration  94\n",
+      "Computing functionals for iteration 94\n",
+      "94\n",
+      "Simulating maps for iteration  95\n",
+      "Computing functionals for iteration 95\n",
+      "95\n",
+      "Simulating maps for iteration  96\n",
+      "Computing functionals for iteration 96\n",
+      "96\n",
+      "Simulating maps for iteration  97\n",
+      "Computing functionals for iteration 97\n",
+      "97\n",
+      "Simulating maps for iteration  98\n",
+      "Computing functionals for iteration 98\n",
+      "98\n",
+      "Simulating maps for iteration  99\n",
+      "Computing functionals for iteration 99\n",
+      "99\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "0.27 hrs\n",
+      "CPU times: user 4h 19min 43s, sys: 2min 40s, total: 4h 22min 24s\n",
+      "Wall time: 2h 54min 29s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nisha already ran -> SKIP\n",
+    "%time coefficient_f(thr_ct, smoothing, nside, itr=100, b=10, f=int(floor(0.1*N_p)))"
    ]
   },
   {
